--- a/storybook/manager-head.html
+++ b/storybook/manager-head.html
@@ -3,6 +3,7 @@
 		const PREVIOUSLY_EXPERIMENTAL_COMPONENTS = [
 			'navigation',
 			'customselectcontrol-v2',
+			'navigator',
 		];
 		const REDIRECTS = [
 			{
